--- a/src/design/antd.less
+++ b/src/design/antd.less
@@ -4,3 +4,4 @@
 @import 'ant-design-vue/es/select/style/index.less';
 @import 'ant-design-vue/es/table/style/index.less';
 @import 'ant-design-vue/es/form/style/index.less';
+@import 'ant-design-vue/es/button/style/index.less';
